Changed names and added another css file.

--- a/USDC Training.html
+++ b/USDC Training.html
@@ -19,10 +19,10 @@
 <nav class="backgroundgradient">
     <ul>
         <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
-        <li><a class="navlink" href="USDC Training.html">New Employees</a></li>
-        <li><a class="navlink" href="recert.html">Recertification</a></li>
-        <li><a class="navlink" href="otherTrainings.html">Other Training/DHS</a></li>
-        <li><a class="navlink" href="newEmployees.html">Home</a></li>
+        <li><a class="navlink" href="neo.html">New Employees</a></li>
+        <li><a class="navlink" href="Recert.html">Recertification</a></li>
+        <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
+        <li><a class="navlink" href="USDC Training.html">Home</a></li>
 
     </ul>
 </nav>
@@ -31,48 +31,15 @@
 
 <div class="welcomeimage">
     <img src="Images/elearning.png"/>
+    <h1>Welcome USDC Employees</h1>
 </div>
 
-<section id="welcometext">
-    <header>Welcome USDC Employees</header>
-    <div class="paragraph">
-        <p>Several online training sessions must be completed on a regular basis.</p>
-        <p>Fortunately, we have them all in one place for you.</p>
-    </div>
-
-    <div class="container-1">
-    <figure>
-        <img class="box-1" src="Images/elearning3.png" />
-    </figure>
-    <header>
-        <span class="trainingname"><a href="recert.html">Current Employee Yearly Recertification</a></span>
-    </header>
-        <span class="description">Complete all courses in this section plus any required from DHS/Additional.</span>
-    </div>
+<div class ="welcomepara">
+        <p class="para1">Several online training sessions must be completed on a regular basis.</p>
+        <p class="para2">Fortunately, we have them all in one place for you.</p></p>
+</div>
 
 
-        <figure>
-            <img class="box-2" src="Images/elearning2.png" />
-        </figure>
-        <header>
-            <span class="trainingname"><a href="additional.html">DHS/Additional Training</a></span>
-        </header>
-        <p class="description">Complete all additional DHS employee trainings.</p>
-
-    </article>
-
-        <figure>
-            <img class="box-3" src="Images/elearning4.png" />
-        </figure>
-        <header>
-            <span class="trainingname"><a href ="neo.html">New Employee Orientation</a></span>
-        </header>
-        <p class="description">Complete all courses in this section.</p>
-        <div class="viewallbutton">
-            View All
-        </div>
-        </div>
-    </article>
 
 
 
@@ -81,8 +48,6 @@
 
     <footer>
         <p>Our address is <address>895 N 900 E American Fork, Utah 84003</address></p>
-
-
     </footer>
 </body>
 </html>
