--- a/contactUs.html
+++ b/contactUs.html
@@ -19,10 +19,10 @@
     <nav class="backgroundgradient">
         <ul>
             <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
-            <li><a class="navlink" href="USDC Training.html">New Employees</a></li>
-            <li><a class="navlink" href="recert.html">Recertification</a></li>
-            <li><a class="navlink" href="otherTrainings.html">Other Training/DHS</a></li>
-            <li><a class="navlink" href="newEmployees.html">Home</a></li>
+            <li><a class="navlink" href="neo.html">New Employees</a></li>
+            <li><a class="navlink" href="Recert.html">Recertification</a></li>
+            <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
+            <li><a class="navlink" href="USDC Training.html">Home</a></li>
 
         </ul>
     </nav>
