--- a/neo.html
+++ b/neo.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8">
     <title>New Employees</title>
 </head>
+
+
 <body>
+<header class="header">
+    <div>
+        <a class ="headerlogo" href="USDC Training.html">
+            <img src="Images/USDC_Square.jpg" width="75"/>
+        </a>
+        <span class="headername">Utah State Developmental Center</span>
+        <input type="search" class="searchbox" placeholder="Search for courses"/>
+    </div>
+
+    <nav class="backgroundgradient">
+        <ul>
+            <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
+            <li><a class="navlink" href="neo.html">New Employees</a></li>
+            <li><a class="navlink" href="Recert.html">Recertification</a></li>
+            <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
+            <li><a class="navlink" href="USDC Training.html">Home</a></li>
+
+        </ul>
+    </nav>
+
+</header>
+
 
 </body>
 </html>
