Added flex boxes to home page and Other Training page.

--- a/USDC Training.html
+++ b/USDC Training.html
@@ -10,7 +10,7 @@
 <header class="header">
 <div>
     <a class ="headerlogo" href="USDC Training.html">
-        <img src="Images/USDC_Square.jpg" width="75"/>
+        <img src="Images/USDC_Square.jpg" width="100"/>
     </a>
     <span class="headername">Utah State Developmental Center</span>
     <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -28,26 +28,59 @@
 </nav>
 
 </header>
+<img src="Images/elearning.png">
 
-<div class="welcomeimage">
-    <img src="Images/elearning.png"/>
-    <h1>Welcome USDC Employees</h1>
+<div class="banner">
+    <div class="banner-text">
+        <h1>Welcome USDC Employees</h1>
+        <h2>Several courses must be taken every year.</h2>
+        <h6>Fortunately, we have them all in one place for you.</h6>
+    </div>
+
 </div>
 
-<div class ="welcomepara">
-        <p class="para1">Several online training sessions must be completed on a regular basis.</p>
-        <p class="para2">Fortunately, we have them all in one place for you.</p></p>
-</div>
+
+    <div class="container-1">
+        <div class="box-1">
+            <h2>VIEW ALL</h2>
+        </div>
+
+        <div class="box-2">
+            <h3>Current Employee Yearly Recertification</h3>
+            <p>Complete all courses in this section.</p>
+        </div>
+    </div>
 
 
+    <div class="container-2">
+        <div class="box-3">
+            <h3>DHS/Additional Training</h3>
+            <p>Complete the courses as needed.</p>
+    </div>
 
+            <div class="box-4">
+                <h2>VIEW ALL</h2>
+            </div>
+    </div>
 
+        <div class="container-3">
+            <div class="box-5">
+                <h2>VIEW ALL</h2>
+            </div>
+
+            <div class="box-6">
+                <h3>New Employees</h3>
+                <p>New employees should complete all courses in this section.</p>
+            </div>
+        </div>
 
 
 
 
     <footer>
-        <p>Our address is <address>895 N 900 E American Fork, Utah 84003</address></p>
+        <h4>Utah State Developmental Center</h4>
+        <p> <address><small>895 N 900 E <br>American Fork, Utah<br> 84003</small></address>
+        <p><small>801-763-4000</small></p>
     </footer>
 </body>
 </html>
