--- a/otherTraining.html
+++ b/otherTraining.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="otherTraining.css">
+    <title>Other Training</title>
+    <link rel="stylesheet" href="styles/otherTraining.css">
 
 </head>
-<body>
 
 <body>
 
 <header class="header">
     <div>
         <a class ="headerlogo" href="USDC Training.html">
-            <img src="Images/USDC_Square.jpg" width="75"/>
+            <img src="Images/USDC_Square.jpg" width="100"/>
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -31,6 +30,52 @@
     </nav>
 
 </header>
+
+<div class="mainImage">
+    <img src="Images/elearning2.png" width="800">
+</div>
+
+<div class="container-1">
+    <div class="box-1">
+        <h3>Security Awareness</h3>
+        <p>Lorem impsum dolor sit amet, conector, disciplien</p>
+        <h3>Every Year</h3>
+        <h4>Start Now</h4>
+    </div>
+
+    <div class="box-2">
+        <h3>Defensive Driving</h3>
+        <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
+        <h3>Every 2 Years</h3>
+        <h4>Start Now</h4>
+    </div>
+
+    <div class="box-3">
+        <h3>Large Passenger Van</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+        <h3>Every Two Years</h3>
+        <h4>Start Now</h4>
+    </div>
+
+    <div class="box-4">
+        <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+        <h3>Every Two Years</h3>
+        <h4>Start Now</h4>
+    </div>
+</div>
+
+
+
+
+<footer>
+    <h4>Utah State Developmental Center</h4>
+    <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
+    <p><small>801-763-4000</small></p>
+</footer>
+
+
+
 
 
 </body>
