Changed the name of the main file.

--- a/contactUs.html
+++ b/contactUs.html
@@ -2,17 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Us</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>Other Training</title>
+    <link rel="stylesheet" href="styles/otherTraining.css">
+    <script src="https://use.fontawesome.com/b6758e6f71.js"></script>
+
 </head>
+
 <body>
 
-<header id="mainHeader">
+<header class="header">
     <div>
-        <a class ="headerlogo" href="USDC Training.html">
-            <img src="Images/USDC_Square.jpg" width="75"/>
+        <a class ="headerlogo" href="index.html">
+            <img src="Images/USDC_Square.jpg" width="100%"/>
         </a>
-        <span id="headername">Utah State Developmental Center</span>
+        <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
     </div>
 
@@ -22,14 +25,14 @@
             <li><a class="navlink" href="neo.html">New Employees</a></li>
             <li><a class="navlink" href="Recert.html">Recertification</a></li>
             <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
-            <li><a class="navlink" href="USDC Training.html">Home</a></li>
+            <li><a class="navlink" href="index.html">Home</a></li>
 
         </ul>
     </nav>
 
 </header>
 
-<p>Want to comment on this information or ask us questions? Leave a message or comment here</p>
+<p>Do you have a question about training? Leave your question here and someone from the Training Department will contact you.</p>
 <form id="mainForm" action="#" method="post"></form>
 <fieldset class="box">
 
@@ -60,7 +63,15 @@
 </fieldset>
 
 <footer>
-    <p>Our address is <address>895 N 900 E American Fork, Utah 84003</address></p>
+    <footer>
+        <h4>Utah State Developmental Center</h4>
+        <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
+        <p><small>801-763-4000</small></p>
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        <i class="fa fa-flickr" aria-hidden="true"></i>
+        <i class="fa fa-google-plus" aria-hidden="true"></i>
+
+    </footer>
 
 
 </footer>
