--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <title>USDC Training</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://use.fontawesome.com/b6758e6f71.js"></script>
+
+
 </head>
 <body>
 
 <header class="header">
 <div>
-    <a class ="headerlogo" href="USDC Training.html">
+    <a class ="headerlogo" href="index.html">
         <img src="Images/USDC_Square.jpg" width="100"/>
     </a>
     <span class="headername">Utah State Developmental Center</span>
@@ -22,22 +25,23 @@
         <li><a class="navlink" href="neo.html">New Employees</a></li>
         <li><a class="navlink" href="Recert.html">Recertification</a></li>
         <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
-        <li><a class="navlink" href="USDC Training.html">Home</a></li>
+        <li><a class="navlink" href="index.html">Home</a></li>
 
     </ul>
 </nav>
 
 </header>
-<img src="Images/elearning.png">
-
 <div class="banner">
     <div class="banner-text">
         <h1>Welcome USDC Employees</h1>
-        <h2>Several courses must be taken every year.</h2>
-        <h6>Fortunately, we have them all in one place for you.</h6>
     </div>
-
 </div>
+
+<div class="welcometext"
+        <span><h1>Several courses must be taken every year.</h1></span>
+        <span><h2>Fortunately, we have them all in one place for you.</h2></span>
+</div>
+
 
 
     <div class="container-1">
@@ -81,6 +85,9 @@
         <h4>Utah State Developmental Center</h4>
         <p> <address><small>895 N 900 E <br>American Fork, Utah<br> 84003</small></address>
         <p><small>801-763-4000</small></p>
+        <i class="fa fa-facebook-official" aria-hidden="true"></i>
+        <i class="fa fa-flickr" aria-hidden="true"></i>
+        <i class="fa fa-google-plus" aria-hidden="true"></i>
     </footer>
 </body>
 </html>
