--- a/otherTraining.html
+++ b/otherTraining.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Other Training</title>
     <link rel="stylesheet" href="styles/otherTraining.css">
+    <script src="https://use.fontawesome.com/b6758e6f71.js"></script>
 
 </head>
 
@@ -11,8 +12,8 @@
 
 <header class="header">
     <div>
-        <a class ="headerlogo" href="USDC Training.html">
-            <img src="Images/USDC_Square.jpg" width="100"/>
+        <a class ="headerlogo" href="index.html">
+            <img src="Images/USDC_Square.jpg" width="100%"/>
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -24,7 +25,7 @@
             <li><a class="navlink" href="neo.html">New Employees</a></li>
             <li><a class="navlink" href="Recert.html">Recertification</a></li>
             <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
-            <li><a class="navlink" href="USDC Training.html">Home</a></li>
+            <li><a class="navlink" href="index.html">Home</a></li>
 
         </ul>
     </nav>
@@ -32,36 +33,33 @@
 </header>
 
 <div class="mainImage">
-    <img src="Images/elearning2.png" width="800">
+    <img src="Images/elearning2.png" width="1000">
 </div>
 
 <div class="container-1">
     <div class="box-1">
         <h3>Security Awareness</h3>
         <p>Lorem impsum dolor sit amet, conector, disciplien</p>
-        <h3>Every Year</h3>
-        <h4>Start Now</h4>
+        <h4>Every Year</h4>
     </div>
 
     <div class="box-2">
         <h3>Defensive Driving</h3>
         <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
-        <h3>Every 2 Years</h3>
-        <h4>Start Now</h4>
+        <h4>Every Two Years</h4>
     </div>
 
     <div class="box-3">
         <h3>Large Passenger Van</h3>
         <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h3>Every Two Years</h3>
-        <h4>Start Now</h4>
+        <h4>Every Two Years</h4>
     </div>
 
     <div class="box-4">
         <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
         <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h3>Every Two Years</h3>
-        <h4>Start Now</h4>
+        <h4>Every Two Years</h4>
+
     </div>
 </div>
 
@@ -72,6 +70,9 @@
     <h4>Utah State Developmental Center</h4>
     <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
     <p><small>801-763-4000</small></p>
+    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+    <i class="fa fa-flickr" aria-hidden="true"></i>
+    <i class="fa fa-google-plus" aria-hidden="true"></i>
 </footer>
 
 
