--- a/neo.html
+++ b/neo.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>New Employees</title>
+    <title>Other Training</title>
+    <link rel="stylesheet" href="styles/otherTraining.css">
+    <script src="https://use.fontawesome.com/b6758e6f71.js"></script>
+
 </head>
 
-
 <body>
+
 <header class="header">
     <div>
-        <a class ="headerlogo" href="USDC Training.html">
-            <img src="Images/USDC_Square.jpg" width="75"/>
+        <a class ="headerlogo" href="index.html">
+            <img src="Images/USDC_Square.jpg" width="100%"/>
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -22,13 +25,86 @@
             <li><a class="navlink" href="neo.html">New Employees</a></li>
             <li><a class="navlink" href="Recert.html">Recertification</a></li>
             <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
-            <li><a class="navlink" href="USDC Training.html">Home</a></li>
+            <li><a class="navlink" href="index.html">Home</a></li>
 
         </ul>
     </nav>
 
 </header>
 
+<div class="mainImage">
+    <img src="Images/elearning4.png" width="1000">
+</div>
+
+<div class="container-1">
+    <div class="box-1">
+        <h3>Back Injury Prevention</h3>
+        <p>Lorem impsum dolor sit amet, conector, disciplien</p>
+    </div>
+
+    <div class="box-2">
+        <h3>Blood-borne Pathogens</h3>
+        <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
+    </div>
+
+    <div class="box-3">
+        <h3>Counseling</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+    </div>
+
+    <div class="box-4">
+        <h3>Dental</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+    </div>
+
+    <div class="box-5">
+        <h3>Dress Code</h3>
+        <p>loremismiwpwoeiso, inosns,mph;sjfoie</p>
+    </div>
+</div>
+
+<div class="container-2">
+    <div class="box-6">
+        <h3>Individual Rights</h3>
+        <p>Lorem impsum dolor sit amet, conector, disciplien</p>
+    </div>
+
+    <div class="box-7">
+        <h3>Life Safety</h3>
+        <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
+
+    </div>
+
+    <div class="box-8">
+        <h3>Psychology</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+    </div>
+
+    <div class="box-9">
+        <h3>Safety Data Sheets</h3>
+        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
+    </div>
+
+    <div class="box-10">
+        <h3>Signs of Illness</h3>
+        <p>loremismiwpwoeiso, inosns,mph;sjfoie</p>
+    </div>
+</div>
+
+
+
+
+<footer>
+    <h4>Utah State Developmental Center</h4>
+    <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
+    <p><small>801-763-4000</small></p>
+    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+    <i class="fa fa-flickr" aria-hidden="true"></i>
+    <i class="fa fa-google-plus" aria-hidden="true"></i>
+</footer>
+
+
+
+
 
 </body>
-</html>
