Fixed styling and re-structured.

--- a/contactUs.html
+++ b/contactUs.html
@@ -63,15 +63,16 @@
 </fieldset>
 
 <footer>
-    <footer>
-        <h4>Utah State Developmental Center</h4>
-        <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
-        <p><small>801-763-4000</small></p>
-        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-        <i class="fa fa-flickr" aria-hidden="true"></i>
-        <i class="fa fa-google-plus" aria-hidden="true"></i>
-
-    </footer>
+    <div class="fbcontainer">
+        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+        </div
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
+    </div>
+</footer>
+</body>
+</html>
 
 
 </footer>
