--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@
     </div>
 </div>
 
-<div class="welcometext"
-        <span><h1>Several courses must be taken every year.</h1></span>
-        <span><h2>Fortunately, we have them all in one place for you.</h2></span>
+<div class="welcometext">
+        <h2>Several online training sessions must be completed on a regular basis.<br>
+        Fortunately, we have them all in one place for you.</h2>
+</div>
+
+<div class="trainingtext">
+    <h2>Employee Mandatory Training</h2>
+    <h4>Click on the desired training to begin.</h4>
 </div>
 
 
 
     <div class="container-1">
-        <div class="box-1">
-            <h2>VIEW ALL</h2>
+        <div class="box-1"><a href="Recert.html">
+            <h2>VIEW ALL</h2></a>
         </div>
 
         <div class="box-2">
@@ -59,17 +64,17 @@
     <div class="container-2">
         <div class="box-3">
             <h3>DHS/Additional Training</h3>
-            <p>Complete the courses as needed.</p>
+            <p>Complete these courses as needed.</p>
     </div>
 
-            <div class="box-4">
-                <h2>VIEW ALL</h2>
+            <div class="box-4"><a href="otherTraining.html">
+                <h2>VIEW ALL</h2></a>
             </div>
     </div>
 
         <div class="container-3">
-            <div class="box-5">
-                <h2>VIEW ALL</h2>
+            <div class="box-5"><a href="neo.html">
+                <h2>VIEW ALL</h2></a>
             </div>
 
             <div class="box-6">
@@ -82,12 +87,13 @@
 
 
     <footer>
-        <h4>Utah State Developmental Center</h4>
-        <p> <address><small>895 N 900 E <br>American Fork, Utah<br> 84003</small></address>
-        <p><small>801-763-4000</small></p>
-        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-        <i class="fa fa-flickr" aria-hidden="true"></i>
-        <i class="fa fa-google-plus" aria-hidden="true"></i>
+        <div class="fbcontainer">
+            <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+        </div
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
+        </div>
     </footer>
 </body>
 </html>
