--- a/otherTraining.html
+++ b/otherTraining.html
@@ -36,48 +36,66 @@
     <img src="Images/elearning2.png" width="1000">
 </div>
 
+<div class="trainingtext">
+    <h2>DHS Additional Training</h2>
+    <h4>Click on the desired training to begin.</h4>
+</div>
+
+
 <div class="container-1">
     <div class="box-1">
-        <h3>Security Awareness</h3>
-        <p>Lorem impsum dolor sit amet, conector, disciplien</p>
-        <h4>Every Year</h4>
+        <div class="section-1"><a href="https://utah.sabacloud.com">
+            <h3>Security Awareness</h3>
+            <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
+    </a>
     </div>
 
     <div class="box-2">
-        <h3>Defensive Driving</h3>
-        <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
-        <h4>Every Two Years</h4>
+        <div class="section-1"><a href="https://utah.sabacloud.com">
+            <h3>Defensive Driving</h3>
+            <p>Provides driver safety information and acknowledgement.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Two Years</h4>
+        </div>
+        </a>
     </div>
 
     <div class="box-3">
-        <h3>Large Passenger Van</h3>
-        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h4>Every Two Years</h4>
+        <div class="section-1"><a href="https://utah.sabacloud.com">
+            <h3>Large Passenger Van</h3>
+            <p>This course covers basic techniques and differences for driving a Large Van.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Two Years</h4>
+        </div>
+        </a>
     </div>
 
     <div class="box-4">
-        <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
-        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h4>Every Two Years</h4>
-
+        <div class="section-1"><a href="https://dhrm.utah.gov/training/workplace-harassment-prevention">
+            <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
+            <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Two Years</h4>
+        </div>
+        </a>
     </div>
 </div>
 
 
-
-
 <footer>
-    <h4>Utah State Developmental Center</h4>
-    <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
-    <p><small>801-763-4000</small></p>
-    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-    <i class="fa fa-flickr" aria-hidden="true"></i>
-    <i class="fa fa-google-plus" aria-hidden="true"></i>
-</footer>
-
-
-
-
-
-</body>
+    <div class="fbcontainer">
+        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+        </div
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
+    </div>
+</footer></body>
 </html>
