--- a/Recert.html
+++ b/Recert.html
@@ -36,55 +36,82 @@
     <img src="Images/elearning3.png" width="1000">
 </div>
 
+<div class="trainingtext">
+    <h2>Current Employee Recertification</h2>
+    <h4>Click on the desired training to begin.</h4>
+</div>
+
 <div class="container-1">
     <div class="box-1">
+    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/backinjuryprevention">
         <h3>Back Injury Prevention</h3>
-        <p>Lorem impsum dolor sit amet, conector, disciplien</p>
-        <h3>Every Year</h3>
-
+        <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
     </div>
+    <div class="section-2">
+        <h4>Every Year</h4>
+    </div>
+    </a>
+</div>
 
     <div class="box-2">
-        <h3>Individual Rights</h3>
-        <p>Lorem impsum dolor sit amet, conector, dispcipine</p>
-        <h3>Every Year</h3>
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/indrights/">
+            <h3>Individual Rights</h3>
+            <p>Provides driver safety information and acknowledgement.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
+        </a>
     </div>
 
     <div class="box-3">
-        <h3>Life Safety</h3>
-        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h3>Every Year</h3>
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdclifesafety/">
+            <h3>Life Safety</h3>
+            <p>This course covers basic techniques and differences for driving a Large Van.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
+        </a>
     </div>
 
     <div class="box-4">
-        <h3>Blood-borne Pathogens</h3>
-        <p>Lorem impsum dolor si eamet, connector, dispciplek</p>
-        <h3>Every Year</h3>
-
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborne_pathogens/">
+            <h3>Blood-borne Pathogens</h3>
+            <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
+        </a>
     </div>
 
     <div class="box-5">
-        <h3>Signs of Illness</h3>
-        <p>Lorem impsum dolor si emalkjasd;kjsdlkfjeoi</p>
-        <h3>Every Year</h3>
-
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcsigns/">
+            <h3>Signs of Illness</h3>
+            <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
+        </a>
     </div>
+
 </div>
 
 
 
 
 <footer>
-    <h4>Utah State Developmental Center</h4>
-    <p> <address><small>895 N 900 E <br>American Fork, Utah 84003</small></address>
-    <p><small>801-763-4000</small></p>
-    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-    <i class="fa fa-flickr" aria-hidden="true"></i>
-    <i class="fa fa-google-plus" aria-hidden="true"></i>
+    <div class="fbcontainer">
+        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+        </div
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        </div>
+        <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
+    </div>
 </footer>
 
-
-
-
-
 </body>
+</html>
+
