Fixed all the training links.

--- a/Recert.html
+++ b/Recert.html
@@ -21,7 +21,6 @@
 
     <nav class="backgroundgradient">
         <ul>
-            <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
             <li><a class="navlink" href="neo.html">New Employees</a></li>
             <li><a class="navlink" href="Recert.html">Recertification</a></li>
             <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
@@ -43,7 +42,7 @@
 
 <div class="container-1">
     <div class="box-1">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/backinjuryprevention">
+    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcbackinjuryprevention/">
         <h3>Back Injury Prevention</h3>
         <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
     </div>
@@ -54,7 +53,7 @@
 </div>
 
     <div class="box-2">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/indrights/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/irights/">
             <h3>Individual Rights</h3>
             <p>Provides driver safety information and acknowledgement.</p>
         </div>
@@ -65,7 +64,7 @@
     </div>
 
     <div class="box-3">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdclifesafety/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/lifesafety2019/">
             <h3>Life Safety</h3>
             <p>This course covers basic techniques and differences for driving a Large Van.</p>
         </div>
@@ -76,7 +75,7 @@
     </div>
 
     <div class="box-4">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborne_pathogens/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/">
             <h3>Blood-borne Pathogens</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
@@ -87,7 +86,7 @@
     </div>
 
     <div class="box-5">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcsigns/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/signs2019/">
             <h3>Signs of Illness</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
