--- a/neo.html
+++ b/neo.html
@@ -21,7 +21,6 @@
 
     <nav class="backgroundgradient">
         <ul>
-            <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
             <li><a class="navlink" href="neo.html">New Employees</a></li>
             <li><a class="navlink" href="Recert.html">Recertification</a></li>
             <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
@@ -51,7 +50,7 @@
 </div>
 
 <div class="box-2">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov">
+    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/">
         <h3>Blood-borne Pathogens</h3>
         <p>This course explains how blood-borne illness are spread and how to protect yourself.</p>
     </div>
@@ -59,7 +58,7 @@
 </div>
 
 <div class="box-3">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov">
+    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdccounseling">
         <h3>Counseling</h3>
         <p>This course explains what counseling services USDC provides. </p>
     </div>
@@ -67,7 +66,7 @@
 </div>
 
 <div class="box-4">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov">
+    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/ud/">
         <h3>Dental</h3>
         <p>This course teaches how to properly handle dental hygiene.</p>
     </div>
@@ -85,20 +84,20 @@
 </div>
 
 <div class="container-2">
-    <div class="box-6"><a href="https://hsconnect.hs.utah.gov">
+    <div class="box-6"><a href="https://hsconnect.hs.utah.gov/irights/">
         <h3>Individual Rights</h3>
         <p>This course teaches about the rights of the individuals that live at USDC.</p>
     </a>
     </div>
 
-    <div class="box-7"><a href="https://hsconnect.hs.utah.gov">
+    <div class="box-7"><a href="https://hsconnect.hs.utah.gov/lifesafety2019">
         <h3>Life Safety</h3>
         <p>This course goes into detal about being safe in the workplace.</p>
     </a>
     </div>
 
     <div class="box-8">
-        <h3>Psychology</h3><a href="https://hsconnect.hs.utah.gov">
+        <h3>Psychology</h3><a href="https://hsconnect.hs.utah.gov/usdcpsychology/">
         <p>This course teaches about the Mandt philosophy.</p>
     </a>
     </div>
@@ -110,7 +109,7 @@
     </div>
 
     <div class="box-10">
-        <h3>Signs of Illness</h3><a href="https://hsconnect.hs.utah.gov">
+        <h3>Signs of Illness</h3><a href="https://hsconnect.hs.utah.gov/signs2019/">
         <p>This course teaches how to recognize the signs and symptoms of illness.</p>
     </a>
     </div>
