--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>USDC Training</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://use.fontawesome.com/b6758e6f71.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 </head>
 <body>
