--- a/otherTraining.html
+++ b/otherTraining.html
@@ -44,7 +44,7 @@
 
 <div class="container-1">
     <div class="box-1">
-        <div class="section-1"><a href="https://utah.sabacloud.com">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000475387?context=user&learnerId=emplo000000000007961">
             <h3>Security Awareness</h3>
             <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
         </div>
@@ -54,8 +54,10 @@
     </a>
     </div>
 
+
+
     <div class="box-2">
-        <div class="section-1"><a href="https://utah.sabacloud.com">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000003661?context=user&learnerId=emplo000000000007961">
             <h3>Defensive Driving</h3>
             <p>Provides driver safety information and acknowledgement.</p>
         </div>
@@ -66,7 +68,7 @@
     </div>
 
     <div class="box-3">
-        <div class="section-1"><a href="https://utah.sabacloud.com">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000043836?context=user&learnerId=emplo000000000007961">
             <h3>Large Passenger Van</h3>
             <p>This course covers basic techniques and differences for driving a Large Van.</p>
         </div>
@@ -77,7 +79,8 @@
     </div>
 
     <div class="box-4">
-        <div class="section-1"><a href="https://dhrm.utah.gov/training/workplace-harassment-prevention">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000444691?context=user&learnerId=emplo000000000007961
+">
             <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
@@ -92,7 +95,7 @@
 <footer>
     <div class="fbcontainer">
         <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-        </div
+        </div>
         <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
         </div>
         <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
