--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
 <nav class="backgroundgradient">
     <ul>
-        <li><a class="navlink" href="contactUs.html">Contact Us</a></li>
         <li><a class="navlink" href="neo.html">New Employees</a></li>
         <li><a class="navlink" href="Recert.html">Recertification</a></li>
         <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
@@ -89,7 +88,7 @@
     <footer>
         <div class="fbcontainer">
             <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-        </div
+        </div>
         <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
         </div>
         <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
