--- a/index.html
+++ b/index.html
@@ -11,25 +11,31 @@
 <body>
 
 <header class="header">
-<div>
-    <a class ="headerlogo" href="index.html">
-        <img src="Images/USDC_Square.jpg" width="100"/>
-    </a>
-    <span class="headername">Utah State Developmental Center</span>
-    <input type="search" class="searchbox" placeholder="Search for courses"/>
-</div>
+    <div>
+        <a class ="headerlogo" href="index.html">
+            <img src="Images/USDC_Square.jpg" width="100"/>
+        </a>
+        <span class="headername">Utah State Developmental Center</span>
+        <input type="search" class="searchbox" placeholder="Search for courses"/>
+    </div>
 
-<nav class="backgroundgradient">
-    <ul>
-        <li><a class="navlink" href="neo.html">New Employees</a></li>
-        <li><a class="navlink" href="Recert.html">Recertification</a></li>
-        <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
-        <li><a class="navlink" href="index.html">Home</a></li>
+    <nav class="backgroundgradient">
+        <ul>
+            <li><a class="navlink" href="neo.html">New Employees</a></li>
+            <li><a class="navlink" href="Recert.html">Recertification</a></li>
+            <li><a class="navlink" href="otherTraining.html">Other Training/DHS</a></li>
+            <li><a class="navlink" href="index.html">Home</a></li>
 
-    </ul>
-</nav>
+        </ul>
+    </nav>
 
 </header>
+
+<div class="mainImage">
+    <img src="Images/elearning.png" width="100%">
+</div>
+
+
 <div class="banner">
     <div class="banner-text">
         <h1>Welcome USDC Employees</h1>
@@ -37,7 +43,7 @@
 </div>
 
 <div class="welcometext">
-        <h2>Several online training sessions must be completed on a regular basis.<br>
+    <h2>Several online training sessions must be completed on a regular basis.<br>
         Fortunately, we have them all in one place for you.</h2>
 </div>
 
@@ -48,51 +54,51 @@
 
 
 
-    <div class="homecontainer-1">
-        <div class="square-1"><a href="Recert.html">
-            <h2>VIEW ALL</h2></a>
-        </div>
-
-        <div class="square-2">
-            <h3>Current Employee Yearly Recertification</h3>
-            <p>Complete all courses in this section.</p>
-        </div>
+<div class="homecontainer-1">
+    <div class="square-1"><a href="Recert.html">
+        <h2>VIEW ALL</h2></a>
     </div>
 
+    <div class="square-2">
+        <h3>Current Employee Yearly Recertification</h3>
+        <p>Complete all courses in this section.</p>
+    </div>
+</div>
 
-    <div class="homecontainer-2">
-        <div class="square-3">
-            <h3>DHS/Additional Training</h3>
-            <p>Complete these courses as needed.</p>
+
+<div class="homecontainer-2">
+    <div class="square-3">
+        <h3>DHS/Additional Training</h3>
+        <p>Complete these courses as needed.</p>
     </div>
 
-            <div class="square-4"><a href="otherTraining.html">
-                <h2>VIEW ALL</h2></a>
-            </div>
+    <div class="square-4"><a href="otherTraining.html">
+        <h2>VIEW ALL</h2></a>
+    </div>
+</div>
+
+<div class="homecontainer-3">
+    <div class="square-5"><a href="neo.html">
+        <h2>VIEW ALL</h2></a>
     </div>
 
-        <div class="homecontainer-3">
-            <div class="square-5"><a href="neo.html">
-                <h2>VIEW ALL</h2></a>
-            </div>
-
-            <div class="square-6">
-                <h3>New Employees</h3>
-                <p>New employees should complete all courses in this section.</p>
-            </div>
-        </div>
+    <div class="square-6">
+        <h3>New Employees</h3>
+        <p>New employees should complete all courses in this section.</p>
+    </div>
+</div>
 
 
 
 
-    <footer>
-        <div class="fbcontainer">
-            <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+<footer>
+    <div class="fbcontainer">
+        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
         </div>
         <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
         </div>
         <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
-        </div>
-    </footer>
+    </div>
+</footer>
 </body>
 </html>
