Fixed images and links to open in new tab

--- a/Recert.html
+++ b/Recert.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div>
         <a class ="headerlogo" href="index.html">
-            <img src="Images/USDC_Square.jpg" width=1000>
+            <img src="Images/USDC_Square.jpg">
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -32,7 +32,7 @@
 </header>
 
 <div class="mainImage">
-    <img src="Images/elearning3.png" width="1000">
+    <img src="Images/elearning3.png" width="100%">
 </div>
 
 <div class="trainingtext">
@@ -42,58 +42,53 @@
 
 <div class="container-1">
     <div class="box-1">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcbackinjuryprevention/">
-        <h3>Back Injury Prevention</h3>
-        <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcbackinjuryprevention/" target="_blank">
+            <h3>Back Injury Prevention</h3>
+            <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
+        </div>
+        <div class="section-2">
+            <h4>Every Year</h4>
+        </div>
     </div>
-    <div class="section-2">
-        <h4>Every Year</h4>
-    </div>
-    </a>
-</div>
 
     <div class="box-2">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/irights/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/irights/" target="_blank">
             <h3>Individual Rights</h3>
             <p>Provides driver safety information and acknowledgement.</p>
         </div>
         <div class="section-2">
             <h4>Every Year</h4>
         </div>
-        </a>
     </div>
 
     <div class="box-3">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/lifesafety2019/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/lifesafety2019/" target="_blank">
             <h3>Life Safety</h3>
             <p>This course covers basic techniques and differences for driving a Large Van.</p>
         </div>
         <div class="section-2">
             <h4>Every Year</h4>
         </div>
-        </a>
     </div>
 
     <div class="box-4">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/" target="_blank">
             <h3>Blood-borne Pathogens</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
         <div class="section-2">
             <h4>Every Year</h4>
         </div>
-        </a>
     </div>
 
     <div class="box-5">
-        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/signs2019/">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/signs2019/" target="_blank">
             <h3>Signs of Illness</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
         <div class="section-2">
             <h4>Every Year</h4>
         </div>
-        </a>
     </div>
 
 </div>
@@ -103,9 +98,9 @@
 
 <footer>
     <div class="fbcontainer">
-        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
-        </div
-        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        <div class="fa fa-facebook fa-3x" aria-hidden="true">
+        </div>
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
         </div>
         <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
     </div>
