--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div>
         <a class ="headerlogo" href="index.html">
-            <img src="Images/USDC_Square.jpg" width="100"/>
+            <img src="Images/USDC_Square.jpg">
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -93,9 +93,9 @@
 
 <footer>
     <div class="fbcontainer">
-        <div class="fa fa-facebook fa-3x" aria-hidden="true"></i>
+        <div class="fa fa-facebook fa-3x" aria-hidden="true">
         </div>
-        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i></a>
+        <div class="twitter"><i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
         </div>
         <h6>Utah State Developmental Center/895 N 900 E American Fork, Utah 84003/801-763-4000</h6>
     </div>
