--- a/otherTraining.html
+++ b/otherTraining.html
@@ -13,7 +13,7 @@
 <header class="header">
     <div>
         <a class ="headerlogo" href="index.html">
-            <img src="Images/USDC_Square.jpg" width="100%"/>
+            <img src="Images/USDC_Square.jpg">
         </a>
         <span class="headername">Utah State Developmental Center</span>
         <input type="search" class="searchbox" placeholder="Search for courses"/>
@@ -32,7 +32,7 @@
 </header>
 
 <div class="mainImage">
-    <img src="Images/elearning2.png" width="1000">
+    <img src="Images/elearning2.png" width="100%">
 </div>
 
 <div class="trainingtext">
@@ -43,7 +43,7 @@
 
 <div class="container-1">
     <div class="box-1">
-        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000475387?context=user&learnerId=emplo000000000007961">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000475387?context=user&learnerId=emplo000000000007961" target="_blank">
             <h3>Security Awareness</h3>
             <p>Increase your security awareness to ensure a secure work environment and protect private information</p>
         </div>
@@ -55,7 +55,7 @@
 
 
     <div class="box-2">
-        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000003661?context=user&learnerId=emplo000000000007961">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000003661?context=user&learnerId=emplo000000000007961" target="_blank">
             <h3>Defensive Driving</h3>
             <p>Provides driver safety information and acknowledgement.</p>
         </div>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="box-3">
-        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000043836?context=user&learnerId=emplo000000000007961">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/learningeventdetail/crtfy000000000043836?context=user&learnerId=emplo000000000007961" target="_blank">
             <h3>Large Passenger Van</h3>
             <p>This course covers basic techniques and differences for driving a Large Van.</p>
         </div>
@@ -75,8 +75,7 @@
     </div>
 
     <div class="box-4">
-        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000444691?context=user&learnerId=emplo000000000007961
-">
+        <div class="section-1"><a href="https://utah.sabacloud.com/Saba/Web_spf/NA1PRD0101/common/leclassdetail/regdw000000000444691?context=user&learnerId=emplo000000000007961" target="_blank">
             <h3>Workplace Harassment and Abusive Conduct Prevention</h3>
             <p>This course covers state and federal policies and laws regarding workplace harassment and prevention.</p>
         </div>
