--- a/neo.html
+++ b/neo.html
@@ -13,10 +13,10 @@
 <header class="header">
     <div>
         <a class ="headerlogo" href="index.html">
-            <img src="Images/USDC_Square.jpg" width="100%"/>
+            <img src="Images/USDC_Square.jpg">
         </a>
         <span class="headername">Utah State Developmental Center</span>
-            <input type="search" class="searchbox" placeholder="Search for courses"/>
+        <input type="search" class="searchbox" placeholder="Search for courses"/>
     </div>
 
     <nav class="backgroundgradient">
@@ -32,7 +32,7 @@
 </header>
 
 <div class="mainImage">
-    <img src="Images/elearning4.png" width="1000">
+    <img src="Images/elearning4.png" width="100%">
 </div>
 
 <div class="trainingtext">
@@ -41,50 +41,50 @@
 </div>
 
 <div class="container-1">
-<div class="box-1">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov">
-        <h3>Back Injury Prevention</h3>
-        <p>This course explains how to protect yourself from potential back injuries.</p>
+    <div class="box-1">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdcbackinjuryprevention/" target="_blank">
+            <h3>Back Injury Prevention</h3>
+            <p>This course explains how to protect yourself from potential back injuries.</p>
+        </div>
+        </a>
     </div>
-    </a>
-</div>
 
-<div class="box-2">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/">
-        <h3>Blood-borne Pathogens</h3>
-        <p>This course explains how blood-borne illness are spread and how to protect yourself.</p>
+    <div class="box-2">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/bloodborneusdc/" target="_blank">
+            <h3>Blood-borne Pathogens</h3>
+            <p>This course explains how blood-borne illness are spread and how to protect yourself.</p>
+        </div>
+        </a>
     </div>
-    </a>
-</div>
 
-<div class="box-3">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdccounseling">
-        <h3>Counseling</h3>
-        <p>This course explains what counseling services USDC provides. </p>
+    <div class="box-3">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/usdccounseling/" target="_blank">
+            <h3>Counseling</h3>
+            <p>This course explains what counseling services USDC provides. </p>
+        </div>
+        </a>
     </div>
-    </a>
-</div>
 
-<div class="box-4">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov/ud/">
-        <h3>Dental</h3>
-        <p>This course teaches how to properly handle dental hygiene.</p>
+    <div class="box-4">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov/ud/" target="_blank">
+            <h3>Dental</h3>
+            <p>This course teaches how to properly handle dental hygiene.</p>
+        </div>
+        </a>
     </div>
-    </a>
-</div>
 
-<div class="box-5">
-    <div class="section-1"><a href="https://hsconnect.hs.utah.gov">
-        <h3>Dress Code</h3>
-        <p>This course goes over the USDC Dress Code policy.</p>
+    <div class="box-5">
+        <div class="section-1"><a href="https://hsconnect.hs.utah.gov" target="_blank">
+            <h3>Dress Code</h3>
+            <p>This course goes over the USDC Dress Code policy.</p>
+        </div>
+        </a>
     </div>
-    </a>
-</div>
 
 </div>
 
 <div class="container-2">
-    <div class="box-6"><a href="https://hsconnect.hs.utah.gov/irights/">
+    <div class="box-6"><a href="https://hsconnect.hs.utah.gov/irights/" target="_blank">
         <h3>Individual Rights</h3>
         <p>This course teaches about the rights of the individuals that live at USDC.</p>
     </a>
@@ -97,19 +97,19 @@
     </div>
 
     <div class="box-8">
-        <h3>Psychology</h3><a href="https://hsconnect.hs.utah.gov/usdcpsychology/">
+        <h3>Psychology</h3><a href="https://hsconnect.hs.utah.gov/usdcpsychology/" target="_blank">
         <p>This course teaches about the Mandt philosophy.</p>
     </a>
     </div>
 
     <div class="box-9">
-        <h3>Safety Data Sheets</h3><a href="https://hsconnect.hs.utah.gov">
+        <h3>Safety Data Sheets</h3><a href="https://hsconnect.hs.utah.gov" target="_blank">
         <p>This course explains what safety data sheets are and how to properly use chemicals.</p>
     </a>
     </div>
 
     <div class="box-10">
-        <h3>Signs of Illness</h3><a href="https://hsconnect.hs.utah.gov/signs2019/">
+        <h3>Signs of Illness</h3><a href="https://hsconnect.hs.utah.gov/signs2019/" target="_blank">
         <p>This course teaches how to recognize the signs and symptoms of illness.</p>
     </a>
     </div>
@@ -129,4 +129,6 @@
 </footer>
 </body>
 </html>
+
+
 
